 - servers disconnect on loss of client heartbeat
   - added '--hbtimeout' server command line parameter, default 15s
   - realtime server timeout behaviour: if local backup used, 
     timeout termination not done earlier than at final 
     TS_BLOCK_TERMINATE to insure local backup is complete
   - file server timeout behaviour: as before, if no
     reports from client in 15s then disconnect

v1.1 CvsBuild 30:
 - cosmetic, printf() of 'dir' file lengths the proper unsigned int now
 - 15s timeout only for file server, realtime server TODO

v1.1 CvsBuild 29:
 - fixed another Big Endian endiannes problem and now large transfers
   work, too

v1.1 CvsBuild 28:
 - added early support for Big Endian platforms e.g. Playstation3,
   to enable you have to edit ./common/Makefile.am before running 'configure' 

v1.1 CvsBuild 27:
 - file server and file client support shared file listing 
   via the "dir" command (client/command.c command_dir()).

v1.1 CvsBuild 26:
 - added gapless_till_block client side counter that is later
   needed by the 'tsunamifs' FUSE filesystem

v1.1 CvsBuild 24:
 - fixed client crashing with nForce2 server in Wettzell by
   having recvfrom() not fill out packet source infos, these
   infos were not used anywhere in the first place.
 - server closes client connection after 15s timeout if no
   client side TCP feedback during a transfer, 350ms is the
   required feedback interval from the client so 15s is plenty

v1.1 CvsBuild 22:
 - real-time server, disabled throttling by VSIB and instead use again 
   normal IPD wait as in file server (after a REQUEST_RESTART old blocks 
   are sent as TS_BLOCK_ORIGINAL, but a VSIB does not throttle these old
   ones, so it blasts at 1 Gbit/s and bombs...)
 - client, ttp_request_retransmit additional check at start so that 
   already received blocks are not queued up for later retransmit batch-request

v1.1 CvsBuild 21:
 - client, increased UDP port upping limit from 16 to 256 concurrent client 